# InterviewAgent

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AuthForm.tsx  AuthenticatedState.tsx  CreateSessionForm.tsx  PracticeSessionView.tsx  SessionDetailView.tsx  SessionList.tsx  SessionsDashboard.tsx  SessionsPage.tsx  StageItemCard.tsx
frontend/src/hooks/: useAuth.ts  usePracticeSession.ts  useSessions.ts
frontend/src/services/: authService.ts  practiceService.ts  sessionService.ts
frontend/src/types/: auth.ts  practice.ts  session.ts
server/: .env.example  Dockerfile  auth.py  bot.py  bot_daily.py  bot_daily_flow.py  bot_flow.py  bot_utils.py  crud.py  cv_parser.py  cv_utils.py  daily_utils.py  database.py  interview_evaluation.py  interview_evaluation_utils.py  interview_gen.py  langsmith_processor.py  main.py  mock_bot_utils.py  models.py  pyproject.toml  schemas.py  services.py  settings.py  ws_connection_manager.py
server/routers/: practices.py  sessions.py  users.py  ws.py
