[project]
name = "interviewagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "notebook>=7.6.0",
    "pipecat-ai[assemblyai,deepgram,google,local,openai]>=1.4.0",
    "python-dotenv>=1.2.2",
]
