[project]
name = "pipecat-quickstart"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-exporter-otlp>=1.43.0",
    # "pipecat-ai[assemblyai,daily,deepgram,openai,runner,silero,webrtc]>=1.4.0",
    "pipecat-ai[assemblyai,deepgram,openai,runner,silero,webrtc]>=1.4.0",
    "pipecatcloud",
    "pydantic-settings>=2.14.2",
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.138.1",
    "greenlet>=3.5.3",
    "pillow>=12.2.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "langsmith>=0.9.4",
    "orjson>=3.11.9",
    "requests-toolbelt>=1.0.0",
    "uuid-utils>=0.16.2",
    "xxhash>=3.8.0",
    "zstandard>=0.25.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-community>=0.4.2",
    "openai>=2.44.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "pymupdf>=1.28.0",
    "langchain-mistralai>=1.1.5",
    "daily-python>=0.30.0",
    "reportlab>=5.0.0",
    "markdown2>=2.5.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
